--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
+<!DOCTYPE html>
 <html>
   <body>
     <canvas id="canvas">
       No canvas for you ;C
     </canvas>
 
-    <script src="out/goog/base.js" type="text/javascript"></script>
     <script src="main.js" type="text/javascript"></script>
-    <script type="text/javascript">goog.require("snake_cljs.core");</script>
   </body>
 </html>
